--- a/_sass/_includes/_socials.scss
+++ b/_sass/_includes/_socials.scss
@@ -25,7 +25,7 @@
 
 .socials__item__link {
 	position: relative;
-	display: block;
+	display: flex;
 	width: 40px;
 	height: 40px;
 	border-radius: 100%;
@@ -45,7 +45,9 @@
 		top: 50%;
 		left: 50%;
 		@include translate(-50%,-52%);
-	}
+	} i {
+		margin: auto;
+		}
 
 	&:hover {
 		background: $accent-color;
